<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="app_name">Sipdroid</string>
<string name="pstn_name">Phone Call</string>
<string name="sip_name">Sipdroid Call, when available</string>
<string name="about">Sipdroid is an open-source SIP client for Android
\n
\nSee http://sipdroid.org for more info
\n
\nVersion ${VERSION}
\nThe software has been released for testing.
\n
\nCopyright (C) 2009 The Sipdroid Open Source Project (http://sipdroid.org)
\nCopyright (C) 2008 Hughes Systique Corporation, USA (http://hsc.com)
\nCopyright (C) 2006 The Android Open Source Project (http://android.com)
\nCopyright (C) 2005 Luca Veltri - University of Parma - Italy (http://mjsip.org)
\n
\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
\n
\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details (http://www.gnu.org/licenses).</string>
<string name="reg">Registering...</string>
<string name="regpref">Preferred</string>
<string name="regclick">Click to select</string>
<string name="regfailed">Registration failed</string>
<string name="voicemail">Message(s) Waiting</string>
<string name="sipdroid_signin">Sign In</string>
<string name="auto_enabled">Auto-Answer/Speakerphone</string>
<string name="auto_disabled">Auto-Answer off</string>
<string name="hintPass">Password</string>
<string name="hintId">ID Number</string>
<string name="empty">Please enter called party address as name@domain.com</string>
<string name="notfast">No suitable data network available</string>
	<string name="settings_ptt">PTT Setting</string>
	<string name="settings_ptt1">Use PTT Service</string>
	<string name="settings_ptt2">Check if use PTT Service</string>
	<string name="settings_ptt_username">PTT Username</string>
	<string name="settings_ptt_server">PTT Server</string>
	<string name="ptt_button">Sign In</string>
	<string name="menu_audiosend">Send Audio</string>
	<string name="menu_audiorelease">Release Audio</string>
	<string name="menu_videosend">Send Video</string>
	<string name="menu_videorelease">Release Video</string>
	<string name="settings_xmpp">XMPP Setting</string>
	<string name="settings_xmpp1">Use XMPP Service</string>
	<string name="settings_xmpp2">Check if use XMPP Service</string>
	<string name="settings_xmpp_server">Server or Proxy</string>
	<string name="settings_xmpp_port">Port</string>
	<string name="settings_xmpp_service">Service Name</string>
    <string name="change_status">Status</string>
	<string name="menu_conference">Conference</string>
	<string name="menu_mystatus">My Status</string>
	<string name="menu_preference">Preference</string>
	<string name="menu_sign_out">Sign Out</string>
	<string name="settings_p2p">P2P Setting</string>
	<string name="settings_p2p1">Use P2P Overlay</string>
	<string name="settings_p2p2">Check if use P2P overlay</string>
	<string name="settings_p2p_mode">"P2P Mode"</string>
	<string name="settings_bootstrap_ip_address">IP Bootstrap Node</string>
	<string-array name="listModes">
		<item>Be Bootstrap Node</item>
		<item>Join P2P Overlay</item>
	</string-array>
	<string-array name="listValues">
		<item>0</item>
		<item>1</item>
	</string-array>
<string name="settings_line">Line</string>
<string name="settings_username">Authorization Username</string>
<string name="settings_password">Password</string>
<string name="settings_server">Server or Proxy</string>
<string name="settings_domain">Domain</string>
<string name="settings_domain2">Leave empty if same as server</string>
<string name="settings_username1">Username or Caller ID</string>
<string name="settings_callerid2">Leave empty if same as authorization username</string>
<string name="settings_port">Port</string>
	<string-array name="port_display_values">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060 (standard)</item>
		<item>5061</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>custom</item>
	</string-array>
	<string-array name="port_values">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060</item>
		<item>5061</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>0</item>
	</string-array>
<string name="settings_protocol">Protocol</string>
    <string-array name="protocol_display_values">
        <item>UDP (less standby on 3G)</item>
        <item>TCP (longer standby on 3G)</item>
    </string-array>
    <string-array name="protocol_values">
        <item>udp</item>
        <item>tcp</item>
    </string-array>
<string name="settings_vquality">Video Quality</string>
    <string-array name="vquality_display_values">
        <item>High (352x288 @ 360kbit)</item>
        <item>Low (176x144 @ 192kbit)</item>
    </string-array>
    <string-array name="vquality_values">
        <item>high</item>
        <item>low</item>
    </string-array>
<string name="settings_stun">Use STUN Server</string>
<string name="settings_stun_server">STUN Server name</string>
<string name="settings_stun_server_port">STUN Server port</string>
<string name="settings_mmtel">Use MMTel flavor</string>
<string name="settings_mmtel_qvalue">Q value</string>
<string name="settings_options">Call Options</string>
<string name="settings_wlan">Use WLAN</string>
<string name="settings_3g">Use 3G</string>
<string name="settings_edge">Use EDGE</string>
<string name="settings_vpn">Use VPN</string>
<string name="settings_check">Check with your mobile operator if he allows VoIP</string>
<string name="settings_vpn2">PBXes offers free VPN service, see PBXes >> HELP</string>
<string name="settings_pref">Preferred Call Type</string>
<string name="settings_pref2">Override by adding \'+\' behind a number in Dialer, or by selecting \'text to\' in Contacts</string>
<string name="settings_auto_on">Auto-Answer in use</string>
<string name="settings_auto_on2">Short vibrating alert when screen is on</string>
<string name="settings_auto_ondemand">Auto-Answer on demand</string>
<string name="settings_auto_ondemand2">Show toggle switch in status bar</string>
<string name="settings_auto_headset">Auto-Answer headset</string>
<string name="settings_auto_headset2">When wired headset is connected</string>
<string name="settings_notifications">Notifications</string>
<string name="settings_MWI">Voicemail</string>
<string name="settings_MWI2">Subscribe to SIP message waiting</string>
<string name="settings_reg">Registration</string>
<string name="settings_reg2">Allows selection of preferred SIP account</string>
<string name="settings_notify">Missed Call</string>
<string name="settings_notify2">Notify with blue LED</string>
<string name="settings_nodata">No Data</string>
<string name="settings_nodata2">Indicate missing voice packets by audible tones</string>
<string name="settings_av_options">Audio/Video</string>
<string name="settings_search">Search &amp; Replace</string>
<string name="settings_excludepat">Exclude Pattern</string>
<string name="settings_sipringtone">SIP Ringtone</string>
<string name="settings_sipringtone2">Set ringtone for incoming SIP call</string>
<string name="settings_sipringtone_dialog">Ringtones</string>
<string name="settings_eargain">Earpiece Gain</string>
<string name="settings_micgain">Microphone Gain</string>
<string name="settings_heargain">Headset Gain</string>
<string name="settings_hmicgain">Headset Mic</string>
<string name="settings_pbxes_options">PBXes Features</string>
<string name="settings_par">Simultaneous Outbound</string>
<string name="settings_par2">Dials all of one person\'s phone numbers in parallel</string>
<string name="settings_improve">Improve Audio</string>
<string name="settings_posurl">URL for Location/Callback</string>
<string name="settings_pos">Update Location</string>
<string name="settings_pos2">Can be announced to PBXes contacts (requires premium account)</string>
<string name="settings_callback">Trigger Callback</string>
<string name="settings_callback2">If no suitable data network available</string>
<string name="settings_callthru">Trigger Callthru</string>
<string name="settings_callthru2">Prefix for Callthru</string>
<string name="settings_wireless_options">Wireless</string>
<string name="settings_bluetooth">Requires Android 2.2 or higher</string>
<string name="settings_keepon">Screen on</string>
<string name="settings_keepon2">Required by some devices for trouble-free Wi-Fi</string>
<string name="settings_selectwifi">Select Wi-Fi AP</string>
<string name="settings_selectwifi2">By signal level</string>
<string name="settings_ownwifi">Control Wi-Fi Power</string>
<string name="settings_ownwifi2">Saves battery</string>
<string name="menu_bluetooth">Bluetooth (experimental)</string>
<string name="codecs">Audio Codecs</string>
<string name="settings_basic">Basic</string>
<string name="settings_basic_about">About</string>
<string name="settings_basic_version">Version</string>
<string name="settings_basic_help">Help</string>
<string name="settings_chat_room_settings">Chat Room Settings</string>
<string name="settings_chat_room_settings_message_font_size">Message Font Size</string>
<string name="settings_chat_room_settings_message_font_summary">Set the Message Font Size when chatting</string>
<string name="settings_chat_room_settings_message_font_dialog_title">You can set the message font size when chatting</string>
<string name="settings_chat_room_settings_send_with_enter_key">Send with enter key</string>
<string name="settings_chat_room_settings_send_with_enter_key_summary">Convenient Message Sending with Bluetooth Keyboard of Qwerty Keypad</string>
<string name="settings_alert">Alert</string>
<string name="settings_alert_at_message_arrival">Alert at Message Arrival</string>
<string name="settings_alert_at_message_arrival_summary">Set Various Alerts at Message Arrival</string>
<string name="settings_alert_at_message_arrival_text">Message Arrival Alert</string>
<string name="settings_alert_at_message_arrival_text_summary">Message Arrival alerts even when a user is not in chatting</string>
<string name="settings_alert_at_message_arrival_fireon">Fire On Event Arrival Alert</string>
<string name="settings_alert_at_message_arrival_fireon_summary">A sound will alert you of new fire-on event</string>
<string name="settings_set_alert_sound">Set Alert Sound</string>
<string name="settings_set_alert_sound_list_summary">Set Alert sound for Event Arrival</string>
<string name="settings_set_alert_sound_list_dialog_title">Alert Sound</string>
<string name="settings_server_settings">Server Settings</string>
<string name="settings_server_settings_sip_account">SIP Account</string>
<string name="settings_server_settings_ptt_identification">Push-To-Talk Identification</string>
<string name="settings_server_settings_xmpp_service">XMPP Service</string>
<string name="settings_server_settings_server_address">Server Address</string>
<string name="settings_personal">Personal</string>
<string name="settings_personal_username">Username</string>
<string name="settings_personal_email">Email</string>
<string name="settings_personal_phone_number">Phone Number</string>
<string name="settings_personal_status">Status</string>
<string name="settings_advance">Advance</string>
<string name="settings_account">Account</string>
<string name="settings_other_options">Other Options</string>
</resources>