<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/settings_basic">
		<PreferenceScreen android:key="basic_help"
			android:title="@string/settings_basic_help" android:singleLine="true">

			<intent android:action="org.sipdroid.action.HELPVIEW" />
		</PreferenceScreen>

		<PreferenceScreen android:key="basic_version"
			android:title="@string/settings_basic_version" android:singleLine="true">

		</PreferenceScreen>

		<PreferenceScreen android:key="basic_about"
			android:title="@string/settings_basic_about" android:singleLine="true">

		</PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_chat_room_settings">
		<ListPreference android:key="chat_room_settings_message_font_size"

			android:title="@string/settings_chat_room_settings_message_font_size"
			android:entries="@array/message_font_size_display_values"
			android:entryValues="@array/message_font_size_values"
			android:summary="@string/settings_chat_room_settings_message_font_summary"
			android:dialogTitle="@string/settings_chat_room_settings_message_font_dialog_title" />

		<CheckBoxPreference android:key="chat_room_settings_send_with_enter_key"
			android:title="@string/settings_chat_room_settings_send_with_enter_key"
			android:summary="@string/settings_chat_room_settings_send_with_enter_key_summary"
			android:selectable="true" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_alert">
		<PreferenceScreen android:title="@string/settings_alert_at_message_arrival"
			android:summary="@string/settings_alert_at_message_arrival_summary"
			android:key="alert_at_message_arrival">
			<CheckBoxPreference android:key="alert_at_message_arrival_text"
				android:title="@string/settings_alert_at_message_arrival_text"
				android:summary="@string/settings_alert_at_message_arrival_text_summary"
				android:selectable="true" />
			<CheckBoxPreference android:key="alert_at_message_arrival_fireon"
				android:title="@string/settings_alert_at_message_arrival_fireon"
				android:summary="@string/settings_alert_at_message_arrival_fireon_summary"
				android:selectable="true" />
		</PreferenceScreen>

		<ListPreference android:key="set_alert_sound"
			android:title="@string/settings_set_alert_sound" android:entries="@array/set_alert_sound_display_values"
			android:entryValues="@array/set_alert_sound_values" android:summary="@string/settings_set_alert_sound_list_summary"
			android:dialogTitle="@string/settings_set_alert_sound_list_dialog_title" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_server_settings">
		<EditTextPreference android:key="server_settings_sip_account"
			android:title="@string/settings_server_settings_sip_account"
			android:singleLine="true" />
		<EditTextPreference android:key="server_settings_ptt_identification"
			android:title="@string/settings_server_settings_ptt_identification"
			android:singleLine="true" />
		<EditTextPreference android:key="server_settings_xmpp_service"
			android:title="@string/settings_server_settings_xmpp_service"
			android:singleLine="true" />
		<EditTextPreference android:key="server_settings_server_address"
			android:title="@string/settings_server_settings_server_address"
			android:singleLine="true" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_personal">
		<EditTextPreference android:key="personal_username"
			android:title="@string/settings_personal_username"
			android:singleLine="true" />
		<EditTextPreference android:key="personal_email"
			android:title="@string/settings_personal_email" android:singleLine="true" />
		<EditTextPreference android:key="personal_phone_number"
			android:title="@string/settings_personal_phone_number"
			android:singleLine="true" />
		<EditTextPreference android:key="personal_status"
			android:title="@string/settings_personal_status" android:singleLine="true" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_advance">
		<PreferenceScreen android:title="@string/settings_account"
			android:key="account">
			<EditTextPreference android:key="domain"
				android:title="@string/settings_domain" android:summary="@string/settings_domain2"
				android:singleLine="true" />
			<EditTextPreference android:singleLine="true"
				android:title="@string/settings_username1" android:key="fromuser"
				android:summary="@string/settings_callerid2">
			</EditTextPreference>
			<ListPreference android:key="port" android:title="@string/settings_port"
				android:entries="@array/port_display_values" android:entryValues="@array/port_values"
				android:dialogTitle="@string/settings_port" />
			<ListPreference android:key="protocol"
				android:title="@string/settings_protocol" android:entries="@array/protocol_display_values"
				android:entryValues="@array/protocol_values" android:dialogTitle="@string/settings_protocol" />
			<CheckBoxPreference android:key="wlan"
				android:title="@string/settings_wlan" android:summary="@string/settings_check" />
			<CheckBoxPreference android:key="3g"
				android:title="@string/settings_3g" android:summary="@string/settings_check" />
			<CheckBoxPreference android:key="edge"
				android:title="@string/settings_edge" android:summary="@string/settings_check" />
			<CheckBoxPreference android:key="vpn"
				android:title="@string/settings_vpn" android:summary="@string/settings_vpn2" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/settings_account"
			android:key="account1">
			<EditTextPreference android:key="domain1"
				android:title="@string/settings_domain" android:summary="@string/settings_domain2"
				android:singleLine="true" />
			<EditTextPreference android:singleLine="true"
				android:title="@string/settings_username1" android:key="fromuser1"
				android:summary="@string/settings_callerid2">
			</EditTextPreference>
			<ListPreference android:key="port1" android:title="@string/settings_port"
				android:entries="@array/port_display_values" android:entryValues="@array/port_values"
				android:dialogTitle="@string/settings_port" />
			<ListPreference android:key="protocol1"
				android:title="@string/settings_protocol" android:entries="@array/protocol_display_values"
				android:entryValues="@array/protocol_values" android:dialogTitle="@string/settings_protocol" />
			<CheckBoxPreference android:key="wlan1"
				android:title="@string/settings_wlan" android:summary="@string/settings_check" />
			<CheckBoxPreference android:key="3g1"
				android:title="@string/settings_3g" android:summary="@string/settings_check" />
			<CheckBoxPreference android:key="edge1"
				android:title="@string/settings_edge" android:summary="@string/settings_check" />
			<CheckBoxPreference android:key="vpn1"
				android:title="@string/settings_vpn" android:summary="@string/settings_vpn2" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/settings_options">
			<ListPreference android:key="pref" android:title="@string/settings_pref"
				android:entries="@array/pref_display_values" android:entryValues="@array/pref_values"
				android:summary="@string/settings_pref2" android:dialogTitle="@string/settings_pref" />
			<CheckBoxPreference android:key="auto_on"
				android:title="@string/settings_auto_on" android:summary="@string/settings_auto_on2" />
			<CheckBoxPreference android:key="auto_ondemand"
				android:title="@string/settings_auto_ondemand" android:summary="@string/settings_auto_ondemand2" />
			<CheckBoxPreference android:key="auto_headset"
				android:title="@string/settings_auto_headset" android:summary="@string/settings_auto_headset2" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/settings_notifications">
			<CheckBoxPreference android:key="MWI_enabled"
				android:title="@string/settings_MWI" android:summary="@string/settings_MWI2" />
			<CheckBoxPreference android:key="registration"
				android:title="@string/settings_reg" android:summary="@string/settings_reg2" />
			<CheckBoxPreference android:key="notify"
				android:title="@string/settings_notify" android:summary="@string/settings_notify2" />
			<CheckBoxPreference android:key="nodata"
				android:title="@string/settings_nodata" android:summary="@string/settings_nodata2" />
			<org.sipdroid.sipua.ui.SipRingtonePreference
				android:key="sipringtone" android:title="@string/settings_sipringtone"
				android:summary="@string/settings_sipringtone2" android:dialogTitle="@string/settings_sipringtone_dialog"
				android:persistent="false" android:ringtoneType="ringtone" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/settings_av_options">
			<ListPreference android:key="eargain" android:title="@string/settings_eargain"
				android:entries="@array/eargain_display_values" android:entryValues="@array/eargain_values"
				android:defaultValue="0.25" android:dialogTitle="@string/settings_eargain" />
			<ListPreference android:key="micgain" android:title="@string/settings_micgain"
				android:entries="@array/eargain_display_values" android:entryValues="@array/eargain_values"
				android:defaultValue="0.25" android:dialogTitle="@string/settings_micgain" />
			<ListPreference android:key="heargain"
				android:title="@string/settings_heargain" android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values" android:defaultValue="0.25"
				android:dialogTitle="@string/settings_heargain" />
			<ListPreference android:key="hmicgain"
				android:title="@string/settings_hmicgain" android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values" android:defaultValue="1.0"
				android:dialogTitle="@string/settings_hmicgain" />
			<ListPreference android:key="vquality"
				android:title="@string/settings_vquality" android:entries="@array/vquality_display_values"
				android:entryValues="@array/vquality_values" android:defaultValue="low"
				android:dialogTitle="@string/settings_vquality" />
		</PreferenceScreen>

		<PreferenceScreen android:key="codecs" android:title="@string/codecs">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="org.sipdroid.sipua" android:targetClass="org.sipdroid.codecs.Codecs$CodecSettings" />

		</PreferenceScreen>


		<PreferenceScreen android:title="@string/settings_wireless_options">
			<CheckBoxPreference android:key="ownwifi"
				android:title="@string/settings_ownwifi" android:summary="@string/settings_ownwifi2" />
			<CheckBoxPreference android:key="selectwifi"
				android:title="@string/settings_selectwifi" android:summary="@string/settings_selectwifi2" />
			<CheckBoxPreference android:key="keepon"
				android:title="@string/settings_keepon" android:summary="@string/settings_keepon2" />
			<CheckBoxPreference android:key="bluetooth"
				android:title="@string/menu_bluetooth" android:summary="@string/settings_bluetooth" />
		</PreferenceScreen>

		<PreferenceScreen android:title="@string/settings_pbxes_options">
			<CheckBoxPreference android:key="par"
				android:title="@string/settings_par" android:summary="@string/settings_par2" />
			<CheckBoxPreference android:key="improve"
				android:title="@string/settings_improve" />
			<EditTextPreference android:key="posurl"
				android:title="@string/settings_posurl" android:hint="https://www1.pbxes.com/name"
				android:singleLine="true" />
			<CheckBoxPreference android:key="pos"
				android:title="@string/settings_pos" android:summary="@string/settings_pos2" />
			<CheckBoxPreference android:key="callback"
				android:title="@string/settings_callback" android:summary="@string/settings_callback2" />
			<CheckBoxPreference android:key="callthru"
				android:title="@string/settings_callthru" android:summary="@string/settings_callback2" />
			<EditTextPreference android:key="callthru2"
				android:title="@string/settings_callthru2" android:hint="Accessno.,PIN#"
				android:singleLine="true" />
		</PreferenceScreen>

		<PreferenceScreen android:title="@string/settings_other_options">
			<EditTextPreference android:key="search"
				android:title="@string/settings_search" android:singleLine="true" />
			<EditTextPreference android:key="excludepat"
				android:title="@string/settings_excludepat" android:singleLine="true" />
			<CheckBoxPreference android:key="stun"
				android:title="@string/settings_stun" />
			<EditTextPreference android:key="stun_server"
				android:title="@string/settings_stun_server" android:singleLine="true" />
			<EditTextPreference android:key="stun_server_port"
				android:title="@string/settings_stun_server_port"
				android:singleLine="true" />
			<CheckBoxPreference android:key="mmtel"
				android:title="@string/settings_mmtel" />
			<EditTextPreference android:key="mmtel_qvalue"
				android:title="@string/settings_mmtel_qvalue" android:singleLine="true" />
		</PreferenceScreen>


	</PreferenceCategory>













</PreferenceScreen>
